Pushed changes for working Authentication
