# models/token.go
@@ -1,0 +1,91 @@
+// Code generated by go-swagger; DO NOT EDIT.
+
+package models
+
+// This file was generated by the swagger tool.
+// Editing this file might prove futile when you re-run the swagger generate command
+
+import (
+	"context"
+
+	"github.com/go-openapi/errors"
+	"github.com/go-openapi/strfmt"
+	"github.com/go-openapi/swag"
+	"github.com/go-openapi/validate"
+)
+
+// Token token
+//
+// swagger:model Token
+type Token struct {
+
+	// email
+	// Required: true
+	Email *string `json:"email"`
+
+	// role
+	Role string `json:"role,omitempty"`
+
+	// token string
+	// Required: true
+	TokenString *string `json:"tokenString"`
+}
+
+// Validate validates this token
+func (m *Token) Validate(formats strfmt.Registry) error {
+	var res []error
+
+	if err := m.validateEmail(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if err := m.validateTokenString(formats); err != nil {
+		res = append(res, err)
+	}
+
+	if len(res) > 0 {
+		return errors.CompositeValidationError(res...)
+	}
+	return nil
+}
+
+func (m *Token) validateEmail(formats strfmt.Registry) error {
+
+	if err := validate.Required("email", "body", m.Email); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+func (m *Token) validateTokenString(formats strfmt.Registry) error {
+
+	if err := validate.Required("tokenString", "body", m.TokenString); err != nil {
+		return err
+	}
+
+	return nil
+}
+
+// ContextValidate validates this token based on context it is used
+func (m *Token) ContextValidate(ctx context.Context, formats strfmt.Registry) error {
+	return nil
+}
+
+// MarshalBinary interface implementation
+func (m *Token) MarshalBinary() ([]byte, error) {
+	if m == nil {
+		return nil, nil
+	}
+	return swag.WriteJSON(m)
+}
+
+// UnmarshalBinary interface implementation
+func (m *Token) UnmarshalBinary(b []byte) error {
+	var res Token
+	if err := swag.ReadJSON(b, &res); err != nil {
+		return err
+	}
+	*m = res
+	return nil
+}
